Implement Rivalz.ai decentralized storage integration with simulated API responses

--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,10 @@ ENCRYPTION_KEY=your_encryption_key
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX=100
 
+# Rivalz.ai Decentralized Storage
+RIVALZ_ENABLED=true
+RIVALZ_SECRET_TOKEN=your_rivalz_secret_token
+
 # Feature Flags
 ENABLE_PREDICTIVE_MAINTENANCE=true
 ENABLE_BLOCKCHAIN_INTEGRATION=true
