Implement peer-to-peer energy trading feature (Phase 6)
- Create energy trading routes for API endpoints
- Update main routes index to include energy trading routes
- Add energy trading environment variables to .env.example
- Create test script for energy trading functionality
- Add comprehensive documentation for energy trading feature
- Update README with energy trading information
- Mark Phase 6 as completed in development roadmap

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,11 @@ RATE_LIMIT_MAX=100
 RIVALZ_ENABLED=true
 RIVALZ_SECRET_TOKEN=your_rivalz_secret_token
 
+# Energy Trading Configuration
+ENABLE_ENERGY_TRADING=true
+ENERGY_TRADING_MIN_PRICE=0.05
+ENERGY_TRADING_MAX_DISTANCE=50
+
 # Feature Flags
 ENABLE_PREDICTIVE_MAINTENANCE=true
 ENABLE_BLOCKCHAIN_INTEGRATION=true
