--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "lint": "eslint src/**/*.js",
     "build": "npm install && npm run lint",
-    "simulate": "node src/tools/simulator.js"
+    "simulate": "node src/tools/simulator.js",
+    "test-rivalz": "node src/test-rivalz.js"
   },
   "keywords": [
     "iot",
@@ -25,6 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "@influxdata/influxdb-client": "^1.35.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
@@ -41,7 +43,9 @@
     "mqtt": "^5.3.0",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
+    "pdfkit": "^0.14.0",
     "redis": "^4.6.11",
+    "rivalz-client": "^1.3.5",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1",
     "web3": "^4.3.0",
