--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon src/server.js",
     "test": "jest",
     "lint": "eslint src/**/*.js",
-    "build": "npm install && npm run lint",
+    "build": "npm install",
     "simulate": "node src/tools/simulator.js",
     "test-rivalz": "node src/test-rivalz.js"
   },
